force-app/main/default/objects/Event__c/fields/Currency_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Currency_Picklist__c</fullName>
    <label>Currency Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>