force-app/main/default/objects/Event__c/fields/Event_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_End_DateTime__c</fullName>
    <label>Event End Date Time</label>
    <type>DateTime</type>
</CustomField>