force-app/main/default/objects/Event__c/fields/Event_Name_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Event_Name_Rich_Text__c</fullName>
    <label>Event Name Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>