force-app/main/default/objects/Event__c/fields/Eventbrite_Event_Password__c.field-meta.xml
<CustomField>
    <fullName>Eventbrite_Event_Password__c</fullName>
    <label>Eventbrite Event Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>