force-app/main/default/objects/Event__c/fields/Eventbrite_Organizer_ID__c.field-meta.xml
<CustomField>
    <fullName>Eventbrite_Organizer_ID__c</fullName>
    <label>Eventbrite Organizer ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>