force-app/main/default/objects/Event__c/fields/Invite_Only__c.field-meta.xml
<CustomField>
    <fullName>Invite_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Only</label>
    <type>Checkbox</type>
</CustomField>