force-app/main/default/objects/Event__c/fields/Is_Reserved_Seating__c.field-meta.xml
<CustomField>
    <fullName>Is_Reserved_Seating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reserved Seating</label>
    <type>Checkbox</type>
</CustomField>