force-app/main/default/objects/Event__c/fields/Is_Series__c.field-meta.xml
<CustomField>
    <fullName>Is_Series__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Series</label>
    <type>Checkbox</type>
</CustomField>