force-app/main/default/objects/Event__c/fields/Listed__c.field-meta.xml
<CustomField>
    <fullName>Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listed</label>
    <type>Checkbox</type>
</CustomField>