force-app/main/default/objects/Event__c/fields/Online_Event__c.field-meta.xml
<CustomField>
    <fullName>Online_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Event</label>
    <type>Checkbox</type>
</CustomField>