force-app/main/default/objects/Event__c/fields/Shareable__c.field-meta.xml
<CustomField>
    <fullName>Shareable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shareable</label>
    <type>Checkbox</type>
</CustomField>