force-app/main/default/objects/Event__c/fields/Show_Pick_Seat__c.field-meta.xml
<CustomField>
    <fullName>Show_Pick_Seat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Pick Seat</label>
    <type>Checkbox</type>
</CustomField>