force-app/main/default/objects/Event__c/fields/Show_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Show_Remaining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Remaining</label>
    <type>Checkbox</type>
</CustomField>