force-app/main/default/objects/Event__c/fields/Show_Seatmap_Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Show_Seatmap_Thumbnail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Seatmap Thumbnail</label>
    <type>Checkbox</type>
</CustomField>