force-app/main/default/objects/Event__c/fields/Sync_Data_With_Eventbrite__c.field-meta.xml
<CustomField>
    <fullName>Sync_Data_With_Eventbrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Data With Eventbrite</label>
    <type>Checkbox</type>
</CustomField>